package de.hhu.chicken.domain.klausur;

enum Klausurart {

  ONLINE, PRAESENZ
}
